--- a/frontend/src/styles/PageStyles/Tensile.css
+++ b/frontend/src/styles/PageStyles/Tensile.css
@@ -444,3 +444,17 @@
     padding: 1rem 1.5rem;
   }
 }
+
+/* Remove up/down arrow buttons from number inputs */
+
+/* For Chrome, Edge, Safari */
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* For Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
